--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -1,17 +1,22 @@
 {
-	"extends": "@tsconfig/svelte/tsconfig.json",
-	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"lib": ["es2020", "DOM"],
-		"moduleResolution": "node",
-		"module": "es2020",
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true,
-		"target": "es2020"
-	}
+    "extends": "@tsconfig/svelte/tsconfig.json",
+    "include": ["src/**/*"],
+    "compilerOptions": {
+        "allowJs": true,
+        "checkJs": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "lib": ["es2020", "DOM"],
+        "moduleResolution": "node",
+        "module": "es2020",
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "target": "es2020",
+        "paths": {
+            "@anki/*": ["c:/anki/ts/*", "c:/anki/.bazel/bin/ts/*"]
+        },
+        "typeRoots": ["./node_modules/@types"]
+    }
 }
